external-crates/move/crates/move-package-alt/tests/data/package_name_empty/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/package_name_empty/Move.toml"`
  ┌─ "tests/data/package_name_empty/Move.toml":2:8
  │
2 │ name = ""
  │        ^^
  │
  = Invalid identifier ''
